GROUP_09.cydsn/REBUILD.log
--------------- Rebuild Started: 04/23/2022 22:38:09 Project: RGBLedDriver.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/RGBLedDriver.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c RGBLedDriver.c -o .\CortexM3\ARM_GCC_541\Debug\RGBLedDriver.o
RGBLedDriver.c: In function 'RGBLed_Start':
RGBLedDriver.c:17:5: warning: implicit declaration of function 'PWM_RG_Start' [-Wimplicit-function-declaration]
     PWM_RG_Start();
     ^
RGBLedDriver.c:18:5: warning: implicit declaration of function 'PWM_B_Start' [-Wimplicit-function-declaration]
     PWM_B_Start();
     ^
RGBLedDriver.c: In function 'RGBLed_Stop':
RGBLedDriver.c:23:5: warning: implicit declaration of function 'PWM_RG_Stop' [-Wimplicit-function-declaration]
     PWM_RG_Stop();
     ^
RGBLedDriver.c:24:5: warning: implicit declaration of function 'PWM_B_Stop' [-Wimplicit-function-declaration]
     PWM_B_Stop();
     ^
RGBLedDriver.c: In function 'RGBLed_WriteColor':
RGBLedDriver.c:29:5: error: 'PWM_RG' undeclared (first use in this function)
     PWM_RG
     ^
RGBLedDriver.c:29:5: note: each undeclared identifier is reported only once for each function it appears in
RGBLedDriver.c:30:1: error: expected ';' before '}' token
 }
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 04/23/2022 22:38:12 ---------------
